# unifi-daily-briefing

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-image.yaml
k8s/: NOTES.md  collector-cronjob.yaml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  report-cronjob.yaml  secret.example.yaml  service.yaml
src/unifi_daily_briefing/: analysis.py  cli.py  config.py  db.py  delivery.py  service.py  unifi.py  web.py
templates/: index.html  report.html
tests/: test_analysis.py  test_service.py  test_unifi.py  test_web.py
